Champs booléens de l export GESCOF

--- a/WebContent/mz/search/export/static_gescof3.xhtml
+++ b/WebContent/mz/search/export/static_gescof3.xhtml
@@ -99,30 +99,31 @@
 		<ui:param name="value" value="" />
 		<ui:param name="type" value="text" />
 	</ui:include>
-	<ui:include src="../../common/excel-column.xhtml">
+
+	<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="PublicationProduits_JoindreConvocation" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_ObservationsAttestations" />
 		<ui:param name="value" value="" />
 		<ui:param name="type" value="text" />
 	</ui:include>
-		<ui:include src="../../common/excel-column.xhtml">
+		<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="PublicationProduits_JoindreAttestation" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
-		<ui:include src="../../common/excel-column.xhtml">
+		<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="PublicationProduits_ObservationsConvention" />
 		<ui:param name="value" value="" />
 		<ui:param name="type" value="text" />
 	</ui:include>
-	<ui:include src="../../common/excel-column.xhtml">
+	<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="PublicationProduits_JoindreConvention" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_PlusProduits" />
@@ -154,10 +155,10 @@
 		<ui:param name="value" value="" />
 		<ui:param name="type" value="text" />
 	</ui:include>
-	<ui:include src="../../common/excel-column.xhtml">
+	<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="PublicationProduits_DPCPluriannuel" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_ModalitesDPCProduit" />
@@ -174,15 +175,15 @@
 		<ui:param name="value" value="" />
 		<ui:param name="type" value="text" />
 	</ui:include>
-		<ui:include src="../../common/excel-column.xhtml">
+		<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="Import" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
-		<ui:include src="../../common/excel-column.xhtml">
+		<ui:include src="../../common/excel-formula.xhtml">
 		<ui:param name="header" value="MAJ" />
-		<ui:param name="value" value="FAUX" />
-		<ui:param name="type" value="text" />
+		<ui:param name="value" value="FAUX()" />
+		<ui:param name="type" value="bool" />
 	</ui:include>
 			<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="ChampIDGenerique" />
