Centrer le nom des mois

--- a/WebContent/mz/calendrier/calendrier.xhtml
+++ b/WebContent/mz/calendrier/calendrier.xhtml
@@ -381,7 +381,7 @@ en informatique et management</div>
 						<td width="90" align="center" nowrap="nowrap" bgcolor="#276bb4">Tarif HT
 						</td>
 						<ui:repeat value="#{calendarManager.months}" var="_month">
-							<td bgcolor="#276bb4">#{fullMonthFormat.format(_month)}</td>
+							<td align="center" bgcolor="#276bb4">#{fullMonthFormat.format(_month)}</td>
 						</ui:repeat>
 					</tr>
 				</thead>
