Export Gescof champs HTML

--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -62,7 +62,7 @@
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="Produit4" />
-			<ui:param name="value" value="#{WEB_URL}#{_dto.formation.urlPlb}" />
+			<ui:param name="value" value="#{_dto.formation.idFormation}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
