--- a/WebContent/mz/intervenant/notificationPanel.xhtml
+++ b/WebContent/mz/intervenant/notificationPanel.xhtml
@@ -9,9 +9,9 @@
 	xmlns:a="http://richfaces.org/a4j">
 
 
-	
-	<rich:popupPanel id="notificationIntervenantsPopup" modal="true" autosized="true"
-		resizeable="false">
+
+	<rich:popupPanel id="notificationIntervenantsPopup" modal="true"
+		autosized="true" resizeable="false">
 		<f:facet name="header">
 			<h:outputText value="Notification intervenants" />
 		</f:facet>
@@ -21,53 +21,90 @@
                 X
             </h:outputLink>
 		</f:facet>
-<h:form>	
+		<h:form>
 
-<a:outputPanel id="notificationIntervenantsContent" layout="block">
-			<s:decorate template="../layout/edit.xhtml">
-				<ui:define name="label">
-					<h:outputText value="Choisir le type de notification ?" />
-				</ui:define>
-				<h:selectOneMenu value="#{grillesManager.typeNotification}">
-					<f:selectItem itemLabel="Mise à jour grille de compétence" itemValue="#{GRILLE}"/>
-					<f:selectItem itemLabel="Notification libre" itemValue="#{LIBRE}"/>
-					<f:ajax event="change" render="@form"/>
-				</h:selectOneMenu>
-			</s:decorate>
-<s:decorate template="../layout/edit.xhtml">
-				<ui:define name="label">
-					<h:outputText value="Sujet" />
-				</ui:define>
-				<h:inputText value="#{grillesManager.notificationEvent.subject}" cols="80"/>
-			</s:decorate>
-			<s:decorate template="../layout/editArea.xhtml">
-				<ui:define name="label">
-					<h:outputText value="Message" />
-				</ui:define>
-				<h:inputTextarea value="#{grillesManager.notificationEvent.message}" cols="80" rows="12"/>
-			</s:decorate>
-<!-- 			<s:decorate template="../layout/edit.xhtml"> -->
-<!-- 				<ui:define name="label"> -->
-<!-- 					<h:outputText value="Voulez vous inclure l'URL de modification de la grille ?" /> -->
-<!-- 				</ui:define> -->
-<!-- 				<h:selectBooleanCheckbox value="#{grillesManager.notificationEvent.includeUrl}" /> -->
-<!-- 			</s:decorate> -->
+			<a:outputPanel id="notificationIntervenantsContent" layout="block">
+				<s:decorate template="../layout/edit.xhtml">
+					<ui:define name="label">
+						<h:outputText value="Choisir le type de notification ?" />
+					</ui:define>
+					<h:selectOneMenu value="#{grillesManager.typeNotification}">
+						<f:selectItem itemLabel="Mise à jour grille de compétence"
+							itemValue="#{GRILLE}" />
+						<f:selectItem itemLabel="Notification libre" itemValue="#{LIBRE}" />
+						<f:ajax event="change" render="@form" />
+					</h:selectOneMenu>
+				</s:decorate>
+				<s:decorate template="../layout/edit.xhtml">
+					<ui:define name="label">
+						<h:outputText value="Sujet" />
+					</ui:define>
+					<h:inputText value="#{grillesManager.notificationEvent.subject}"
+						cols="80" />
+				</s:decorate>
+				<s:decorate template="../layout/editArea.xhtml">
+					<ui:define name="label">
+						<h:outputText value="Message" />
+					</ui:define>
+					<h:inputTextarea
+						value="#{grillesManager.notificationEvent.message}" cols="80"
+						rows="12" />
+				</s:decorate>
+				<s:decorate template="../layout/upload.xhtml">
+					<ui:define name="label">Ajouter des pièces jointes</ui:define>
+					<rich:fileUpload
+						fileUploadListener="#{grillesManager.uploadAttachment}"
+						id="upload" listHeight="70px">
+						<a:ajax event="uploadcomplete" execute="@none"
+							render="attachmentsPanel" />
+					</rich:fileUpload>
+					<ui:define name="preview">
 
- <br/>
-        <h:outputFormat value="#{messages['mail.destinataires.size']}" >
-        	<f:param value="#{grillesManager.notificationEvent.intervenants.size()}"></f:param>
-        </h:outputFormat>
-        <h:outputText rendered="#{grillesManager.notificationEvent.intervenants.size() &lt; 13}" value="( #{grillesManager.notificationEvent.destinatairesAsString} )" />
-        <br/><br/>
-        
-			<input type="hidden" name="cid" value="#{conversation.id}" />
-			<a:commandButton value="#{messages['action.cancel']}"
-				onclick="#{rich:component('notificationIntervenantsPopup')}.hide();" />
-			<h:commandButton action="#{grillesManager.sendNotification()}" value="#{messages['action.envoyer']}"
-				onclick="#{rich:component('notificationIntervenantsPopup')}.hide();" />
-</a:outputPanel>
-</h:form>
-		
+					</ui:define>
+				</s:decorate>
+				<a:outputPanel id="attachmentsPanel">
+					<h:outputText value="Pas de pièce(s) jointe(s)"
+						rendered="#{grillesManager.notificationEvent.attachments.size == 0}" />
+					<h:outputText value="Pièce(s) jointe(s)"
+						rendered="#{grillesManager.notificationEvent.attachments.size != 0}" />
+					<ul>
+
+						<a:repeat value="#{grillesManager.notificationEvent.attachments}"
+							var="attachment">
+							<li style="font-size: small">#{attachment.name}
+								(#{attachment.length}) <a:commandLink value="Enlever"
+									action="#{grillesManager.removeAttachment(attachment)}" render="attachmentsPanel"></a:commandLink>
+							</li>
+						</a:repeat>
+					</ul>
+				</a:outputPanel>
+				<!-- 			<s:decorate template="../layout/edit.xhtml"> -->
+				<!-- 				<ui:define name="label"> -->
+				<!-- 					<h:outputText value="Voulez vous inclure l'URL de modification de la grille ?" /> -->
+				<!-- 				</ui:define> -->
+				<!-- 				<h:selectBooleanCheckbox value="#{grillesManager.notificationEvent.includeUrl}" /> -->
+				<!-- 			</s:decorate> -->
+
+				<br />
+				<h:outputFormat value="#{messages['mail.destinataires.size']}">
+					<f:param
+						value="#{grillesManager.notificationEvent.intervenants.size()}"></f:param>
+				</h:outputFormat>
+				<h:outputText
+					rendered="#{grillesManager.notificationEvent.intervenants.size() &lt; 13}"
+					value="( #{grillesManager.notificationEvent.destinatairesAsString} )" />
+				<br />
+				<br />
+
+				<input type="hidden" name="cid" value="#{conversation.id}" />
+				<a:commandButton value="#{messages['action.cancel']}"
+					onclick="#{rich:component('notificationIntervenantsPopup')}.hide();" />
+				<h:commandButton action="#{grillesManager.sendNotification()}"
+					value="#{messages['action.envoyer']}"
+					onclick="#{rich:component('notificationIntervenantsPopup')}.hide();" />
+			</a:outputPanel>
+		</h:form>
+
 	</rich:popupPanel>
 
 </ui:composition>
