--- a/WebContent/mz/common/historique.xhtml
+++ b/WebContent/mz/common/historique.xhtml
@@ -47,7 +47,7 @@
 			<h:outputText value="#{event.formation.libelle}" />
 		</s:link>
 		<h:outputText rendered="#{event.formation == null}"
-			value="#{messages[event.historiqueKey]}" />
+			value="#{event.message}" />
 	</rich:column>
 	<rich:column id="type">
 		<h:outputText rendered="#{messages[event.historiqueKey] != null}"
