--- a/WebContent/mz/search/export/search_gescof.xhtml
+++ b/WebContent/mz/search/export/search_gescof.xhtml
@@ -28,7 +28,7 @@
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 			<ui:param name="header" value="CoutTotalHT" />
-			<ui:param name="value" value="#{_dto.intra ? 0 : _dto.tarifInterAsInt}" />
+			<ui:param name="value" value="#{_dto.intra ? 0 : _dto.prixAsInt}" />
 			<ui:param name="type" value="text" />
 		</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
