--- a/WebContent/mz/calendrier/calendrier.xhtml
+++ b/WebContent/mz/calendrier/calendrier.xhtml
@@ -398,7 +398,7 @@ en informatique et management</div>
 								</td>
 						<td align="center">#{_dto.formation.duree}</td>
 						<td align="center" nowrap="nowrap"><h:outputText
-								rendered="#{!_dto.intra}" value="#{_dto.tarifInter}">
+								rendered="#{!_dto.intra}" value="#{_dto.formation.prix}">
 								<f:convertNumber currencySymbol="€" type="currency" locale="FR" />
 							</h:outputText> <h:outputText rendered="#{_dto.intra}"
 								value="#{messages['formation.intra']}" /></td>
