--- a/WebContent/mz/formation/formationAssocieesPanel.xhtml
+++ b/WebContent/mz/formation/formationAssocieesPanel.xhtml
@@ -23,7 +23,7 @@
 		</f:facet>
 		<h:form>
 			<rich:select enableManualInput="true" value="#{formationManager.newFormationAssociee}">
-				<s:selectItems value="#{formationManager.allFormations}"
+				<s:selectItems value="#{applicationManager.allFormations}"
 					var="formation" label="#{formation.reference}-#{formation.libelle}"
 					noSelectionLabel="Saisissez des caractères pour sélectionner" />
 				<s:convertEntity />
