--- a/WebContent/mz/formation/edit_web.xhtml
+++ b/WebContent/mz/formation/edit_web.xhtml
@@ -13,9 +13,9 @@
 			<plb:editorObjectifs value="#{formation.descriptif}"
 				id="descriptifEditor" height="160" urlCss="#{URL_CSS}" />
 		</ui:define>
-		<ui:define name="objectifs_operationels">
-			<plb:editorObjectifs value="#{formation.objectifs_operationels}"
-				id="objectifsOperationelsEditor" height="160" urlCss="#{URL_CSS}" />
+		<ui:define name="objectifs_operationnels">
+			<plb:editorObjectifs value="#{formation.objectifs_operationnels}"
+				id="objectifsOperationnelsEditor" height="160" urlCss="#{URL_CSS}" />
 		</ui:define>
 		<ui:define name="objectifs_pedagogiques">
 			<plb:editorObjectifs value="#{formation.objectifs_pedagogiques}"
