--- a/WebContent/mz/formation/visu_web.xhtml
+++ b/WebContent/mz/formation/visu_web.xhtml
@@ -21,12 +21,12 @@
 
 		</ui:define>
 
-		<ui:define name="objectifs_operationels">
+		<ui:define name="objectifs_operationnels">
 
 			<div class="formation_objectifs">
 				<h:outputFormat escape="false"
-					rendered="#{formation.objectifs_operationels != null}"
-					value="#{formation.objectifs_operationels}" />
+					rendered="#{formation.objectifs_operationnels != null}"
+					value="#{formation.objectifs_operationnels}" />
 			</div>
 
 
