--- a/WebContent/mz/update/_updateList.xhtml
+++ b/WebContent/mz/update/_updateList.xhtml
@@ -14,7 +14,7 @@
 						<a:ajax event="change" render="resultList,updateCount" execute="@this" immediate="true" />
 						<f:selectItem itemValue="#{NOT_STASHED}" itemLabel="Formations en cours de traitement" />
 						<f:selectItem itemValue="#{STASHED}" itemLabel="Formations mises de côté" />
-						<f:selectItem itemValue="#{ALL}" itemLabel="Toutes les formations sans descriptifs" />
+						<f:selectItem itemValue="#{ALL}" itemLabel="Toutes les formations sans descriptifs ou objectifs opérationnels" />
 						
 					</h:selectOneMenu>
 					
