--- a/WebContent/mz/search/export/static_gescof3.xhtml
+++ b/WebContent/mz/search/export/static_gescof3.xhtml
@@ -16,7 +16,7 @@
 	</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_Objectifs" />
-		<ui:param name="value" value="" />
+		<ui:param name="value" value="#{_dto.formation.gescofObjectifs}" />
 		<ui:param name="type" value="text" />
 	</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
@@ -36,7 +36,8 @@
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_Evaluation" />
-		<ui:param name="value" value="#{_dto.formation.modalitesSuiviAsString}" />
+<!-- 		<ui:param name="value" value="#{_dto.formation.modalitesSuiviAsString}" /> -->
+		<ui:param name="value" value="#{_dto.formation.gescofEvaluation}" />	
 		<ui:param name="type" value="text" />
 	</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
@@ -86,7 +87,7 @@
 	</ui:include>
 					<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_Observations" />
-		<ui:param name="value" value="#{_dto.formation.objectifsAsString}" />
+		<ui:param name="value" value="#{_dto.formation.objectifs_pedagogiquesAsString}" />
 		<ui:param name="type" value="text" />
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
