Export du champ contenu pour Gescof

--- a/WebContent/mz/search/export/static_gescof3.xhtml
+++ b/WebContent/mz/search/export/static_gescof3.xhtml
@@ -31,7 +31,7 @@
 	</ui:include>
 		<ui:include src="../../common/excel-column.xhtml">
 		<ui:param name="header" value="PublicationProduits_Contenu" />
-		<ui:param name="value" value="" />
+		<ui:param name="value" value="#{_dto.formation.contenuAsString}" />
 		<ui:param name="type" value="text" />
 	</ui:include>
 	<ui:include src="../../common/excel-column.xhtml">
